Start view has start button

--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -4,5 +4,9 @@
     <meta charset="UTF-8">
     <title>Flashcard</title>
 </head>
-<body></body>
+<body>
+<form method="post" th:action="@{/start}">
+    <button type="submit">START</button>
+</form>
+</body>
 </html>
